--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -9,42 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:526: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "/home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:527: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "/home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:528: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "/home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:529: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "/home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:530: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "/home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/dtypes.py:535: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -65,18 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train_images (5187, 50, 50, 1)\n",
-      "Y_train_labels (5187, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dataset\n",
     "\n",
@@ -90,40 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tflearn/initializations.py:119: UniformUnitScaling.__init__ (from tensorflow.python.ops.init_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.initializers.variance_scaling instead with distribution=uniform to get equivalent behavior.\n",
-      "WARNING:tensorflow:From /home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tflearn/layers/core.py:239: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
-      "WARNING:tensorflow:From ../src/models/triplet_loss.py:35: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "WARNING:tensorflow:From /home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.cast instead.\n",
-      "WARNING:tensorflow:From /home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/ops/math_grad.py:102: div (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Deprecated in favor of operator or tf.math.divide.\n",
-      "WARNING:tensorflow:From /home/thuync/.virtualenvs/lungcancer/lib/python3.6/site-packages/tensorflow/python/training/saver.py:1266: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use standard file APIs to check for files with this prefix.\n",
-      "INFO:tensorflow:Restoring parameters from /home/thuync/thuync/LungCancerDetection/ckpt/nodule3-classifier.tfl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Model\n",
     "\n",
@@ -142,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "preds (5187, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inference\n",
     "\n",
@@ -162,19 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(845, 2) (4342, 2)\n",
-      "avg_pos_embedding [ 0.00042632 -0.03634213]\n",
-      "avg_neg_embedding [ 0.00042632 -0.0363417 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get clusters\n",
     "\n",
@@ -200,18 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_test_images (1622, 50, 50, 1)\n",
-      "Y_test_labels (1622, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dataset\n",
     "\n",
@@ -225,17 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "embeddings (1622, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Inference\n",
     "\n",
@@ -245,18 +147,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "neg_ratio: 1622\n",
-      "pos_ratio: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cluster\n",
     "\n",
@@ -265,8 +158,8 @@
     "dists = np.hstack([neg_dists, pos_dists])\n",
     "pred_indicies = np.argmin(dists, axis=1)\n",
     "\n",
-    "print(\"neg_ratio:\", (pred_indicies==0).sum())\n",
-    "print(\"pos_ratio:\", (pred_indicies==1).sum())"
+    "print(\"neg_ratio:\", (pred_indicies==0).sum() / pred_indicies.size)\n",
+    "print(\"pos_ratio:\", (pred_indicies==1).sum() / pred_indicies.size)"
    ]
   },
   {
