--- a/notebooks/Testing.ipynb
+++ b/notebooks/Testing.ipynb
@@ -20,12 +20,59 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import tflearn, h5py, cv2\n",
     "import matplotlib.pyplot as plt\n",
+    "import tflearn, h5py, cv2, itertools\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "import sys\n",
     "sys.path.append('..')\n",
     "from src.models.cnn_model import CNNModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_metrics(Y_test_labels, label_predictions):\n",
+    "    cm = confusion_matrix(Y_test_labels[:,1], label_predictions[:,1])\n",
+    "    TN = cm[0][0]\n",
+    "    FP = cm[0][1]\n",
+    "    FN = cm[1][0]\n",
+    "    TP = cm[1][1]\n",
+    "\n",
+    "    precision = TP*1.0/(TP+FP)\n",
+    "    recall = TP*1.0/(TP+FN)\n",
+    "    specificity = TN*1.0/(TN+FP)\n",
+    "    return precision, recall, specificity, cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm, classes, normalize=False, title='Confusion matrix', cmap=plt.cm.Purples):\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j],\n",
+    "            horizontalalignment=\"center\",\n",
+    "            color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')"
    ]
   },
   {
@@ -157,9 +204,29 @@
     "neg_dists = ((embeddings-avg_neg_embedding)**2).sum(axis=1)[:,np.newaxis]\n",
     "dists = np.hstack([neg_dists, pos_dists])\n",
     "pred_indicies = np.argmin(dists, axis=1)\n",
+    "neg_pred_indicies = np.argmax(dists, axis=1)\n",
     "\n",
     "print(\"neg_ratio:\", (pred_indicies==0).sum() / pred_indicies.size)\n",
     "print(\"pos_ratio:\", (pred_indicies==1).sum() / pred_indicies.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Metrics\n",
+    "\n",
+    "predictions = np.hstack([neg_pred_indicies[:,np.newaxis], pred_indicies[:,np.newaxis]])\n",
+    "precision, recall, specificity, cm = get_metrics(Y_test_labels, predictions)\n",
+    "print(\"precision:\", precision)\n",
+    "print(\"recall:\", recall)\n",
+    "print(\"specificity:\", specificity)\n",
+    "\n",
+    "plt.figure(figsize=(10,15))\n",
+    "plot_confusion_matrix(cm, classes=['no-nodule', 'nodule'], title='Confusion matrix')\n",
+    "plt.show()"
    ]
   },
   {
